--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
 
 
 .tektur {
-  font-family: "Tektur", sans-serif;
+   font-family: "Inconsolata", monospace;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
